# indexer

./: .gitignore  CMakeLists.txt  README.md  build.sh  document1  main.cpp  uml.uxf
include/: DocumentRepository.h  Forward.h  ForwardIndex.h  Inverted.h
include/indexer/: Forward.h  Inverted.h  types.h
libs/: json.hpp
libs/file/: README.md  file.cpp  file.h
scripts/: partition_file.sh  split.sh  split_file.sh
source/: DocumentRepository.cpp  Forward.cpp  ForwardIndex.cpp  Inverted.cpp
tests/: CMakeLists.txt  DocumentRepositoryTest.cpp  ForwardIndexTests.cpp  InvertedIndexTest.cpp  test_header.h
tests/data/: document1  duplicate_data
